GenericRPGGreenfoot/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
G:\Greenfoot-302-standalone\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
G:\Greenfoot-302-standalone\Greenfoot\lib\extensions\greenfoot.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\bluejcore.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\bluejeditor.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\bluejext.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\AppleJavaExtensions.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\junit-4.11.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\hamcrest-core-1.3.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\bluej.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\commons-httpclient-3.1.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\commons-logging-api-1.1.2.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\commons-codec-1.3.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\jl1.0.1.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\opencsv-2.3.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\xom-1.2.9.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\jna-4.2.0.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\jna-platform-4.2.0.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\guava-17.0.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\javassist-3.18.0.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\commons-vfs2-2.0.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\httpclient-4.1.1.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\httpcore-4.1.jar;G:\Greenfoot-302-standalone\Greenfoot\lib\httpmime-4.1.1.jar;H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot
-d
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
G:\Greenfoot-302-standalone\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java
<---- end of javadoc command ---->
Loading source file H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java...
Constructing Javadoc information...
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\RPGActor.java:568: error: ')' expected
   return (a.m_equippedShield==itemArray[10];
                                            ^
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\RPGActor.java:594: error: ';' expected
   return (a.m_equippedGauntlets(itemArray[12]))
                                                ^
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\RPGActor.java:1115: error: not a statement
   a.m_equippedGauntlets==itemArray[18];
                        ^
Standard Doclet version 1.8.0_66
Building tree for all the packages and classes...
Generating H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\doc\Battle.html...
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:44: warning - @param tag has no arguments.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:471: warning - @param tag has no arguments.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:520: warning - @param tag has no arguments.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:28: warning - @pre is an unknown tag.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:28: warning - @post is an unknown tag.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:28: warning - Tag @return cannot be used in constructor documentation.  It can only be used in the following types of documentation: method.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:44: warning - @pre is an unknown tag.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:44: warning - @post is an unknown tag.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:44: warning - @param argument "" is not a parameter name.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:397: warning - @pre is an unknown tag.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:397: warning - @post is an unknown tag.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:397: warning - @return tag cannot be used in method with void return type.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:361: warning - @pre is an unknown tag.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:361: warning - @post is an unknown tag.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:361: warning - @return tag cannot be used in method with void return type.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:450: warning - @pre is an unknown tag.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:450: warning - @post is an unknown tag.
H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\Battle.java:450: warning - @return tag cannot be used in method with void return type.
Generating H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\doc\package-frame.html...
Generating H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\doc\package-summary.html...
Generating H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\doc\allclasses-frame.html...
Generating H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\doc\allclasses-noframe.html...
Generating H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\doc\index.html...
Generating H:\EECS_448\Project4\GenericRPGConsole\GenericRPGGreenfoot\doc\stylesheet.css...
21 warnings
